# humanoid_navigation

footstep_planner/: CMakeLists.txt  package.xml
footstep_planner/include/footstep_planner/: FootstepPlanner.h
footstep_planner/msg/: FootstepLocation.msg  FootstepLocationsArray.msg
footstep_planner/src/: FootstepPlanner.cpp
